--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "avatar": "Vuetify MD",
+  "avatar": "Bali Solution Biz",
   "buttons": "Buttons",
   "calendar": "Calendar",
   "charts": "Charts",
